# ToAdapt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ROLLOUT_CHECKLIST.md  ROLLOUT_PLAN.md  TODO.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.next/: trace  trace-build
backend/: anonymize.py  auth.py  llm.py  main.py  ratelimit.py  timeutils.py
data/: experiment_events.json  submission_states.json
docs/: teacher_alignment_report_20260531_17submissions.md  tutoren_executive_summary.md
frontend/: middleware.ts  package-lock.json  package.json
scripts/: cleanup_test_artifacts_20260717.py  compare_teacher_rubric_scores.py  ensure_mongo_indexes.py  evaluate_tutor_responses.py  export_review_workbooks.py  generate_tutor_codes.py  import_prolific_runs.py  llm_stub.py  load_test.py  prepare_demo_dashboard.py  publish_dashboard_scores.py  retry_technical_fallback_scores.py  sync_case_to_mongo.py
tests/: conftest.py  test_case_editor.py  test_case_package.py  test_compare_teacher_rubric_scores.py  test_dashboard_difficulties.py  test_export_review_workbooks.py  test_formative_support.py  test_group_code_validation.py  test_group_uploads.py  test_groups_and_privacy.py  test_import_prolific_runs.py  test_llm_client.py  test_load_test_tools.py  test_orchestrator_guardrails.py  test_phase1_hardening.py  test_prepare_demo_dashboard.py  test_publish_dashboard_scores.py  test_retention_ttl.py  test_rubric_evaluator.py  test_rubric_loader.py  test_skeleton.py  test_submission_store.py  test_teacher_session_revocation.py  (+1 more)
(+104 files in other folders)
