[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "toadapt"
version = "0.1.0"
description = "Multi-Agent Scaffolding System für BWL A"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# load_dotenv() muss vor den Backend-Imports laufen (Env-abhängige Konfiguration).
"backend/main.py" = ["E402"]
"backend/db/submission_store.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
